2006-12-12  Shawn Betts  <sabetts@vcn.bc.ca>

	* stumpwm.lisp (stumpwm): update modifier mapping before calling init-screen

	* primitives.lisp (modifiers): new slot, numlock

	* kmap.lisp (x11-mods): add optional arg with-numlock

	* core.lisp (screen-y): handle the case when the mode-line is on the bottom 
	(remove-window): reparent the window back to root
	(xwin-grab-keys): grab keys including the numlock modifier

2006-12-01  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp (focus-last-frame): show the frame indicator

	* core.lisp (raise-window): raise the window's parent
	(split-frame): set the group's last frame to the new frame.

	* user.lisp (*root-map*): bind TAB to fother
	(focus-last-frame): new function
	("fother"): new command

	* primitives.lisp (tile-group): add last-frame slot

	* core.lisp (focus-frame): record the last frame

2006-11-30  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp ("snext"): new command
	("sprev"): likewise
	("sother"): likewise

	* core.lisp (next-screen): new function
	(move-screen-to-head): likewise
	(switch-to-screen): likewise

	* user.lisp (run-commands): add a 'do' to the loop

2006-11-27  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map): bind C-t ? to help

2006-11-26  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map*): bind C-t " to windowlist
	("next"): if no window is focused call other-window
	("prev"): likewise
	(*menu-map*): new keymap
	(menu-state): new struct
	(bound-check-menu): new function
	(menu-up): likewise
	(menu-down): likewise
	(menu-finish): likewise
	(menu-abort): likewise
	(select-from-menu): likewise
	("windowlist"): new command
	(run-commands): new function

	* primitives.lisp (*supress-echo-timeout*): new global

	* core.lisp (echo-string-list): dont reset timeout if *supress-echo-timeout* is T
	(read-from-keymap): new function
	(handle-keymap): only use the kmap's symbol value if it's bound and a hash-table
